fdo#53089: Avoid setting valid numbers as text during html import.

Change-Id: I5fa9a54f70e8e4d8aac42687f2a204b2925d4619