sc/source/core/tool/stringutil.cxx
@@ -36,7 +36,7 @@ using ::rtl::OUStringBuffer;
 ScSetStringParam::ScSetStringParam() :
     mpNumFormatter(NULL),
     mbDetectNumberFormat(true),
-    mbSetTextCellFormat(false),
+    meSetTextNumFormat(Never),
     mbHandleApostrophe(true)
 {
 }
